@@ -25,7 +25,6 @@ subprojects {
 
     tasks.withType<JavaCompile> {
         options.encoding = "UTF-8"
-        options.compilerArgs.addAll(listOf("--enable-preview", "-Xlint:preview"))
     }
 
     tasks.withType<Javadoc> {
@@ -34,7 +33,6 @@ subprojects {
 
     tasks.test {
         useJUnitPlatform()
-        jvmArgs("--enable-preview")
         finalizedBy(tasks.jacocoTestReport)
     }
 
